# funny-tweets-re

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  fly.toml  heroku.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml  heroku-deploy.yml  lint.yml  style.yml  tests.yml
scripts/: generate_token.py  get_twitter_user_id.py
src/: config.py  entities.py  firestore.py  main.py  twitter.py  utils.py
src/adapters/: firestore.py  twitter.py
tests/: conftest.py  test_main.py
tests/adapters/: test_firestore.py  test_twitter.py
