[tool.poetry]
name = "funny-tweets-re"
version = "0.1.0"
description = "Funny tweets retweet bot"
authors = ["Claudio <claudio.work69@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests-oauthlib = "^1.3.1"
firebase-admin = "^5.2.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
black = "^22.6.0"
beeprint = "^2.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
